--- a/package.json
+++ b/package.json
@@ -4,22 +4,32 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "dev": "ts-node-dev src/index.ts --ignore __tests__",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/supertest": "^2.0.11",
+    "axios": "^0.21.1",
+    "babel": "^6.23.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^27.0.5",
+    "jest-mock-axios": "^4.4.0",
+    "node-fetch": "^2.6.1",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.0.1",
     "sqlite3": "^5.0.2",
+    "supertest": "^6.1.3",
     "typeorm": "^0.2.32",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
     "@types/node": "^14.14.41",
     "@types/uuid": "^8.3.0",
+    "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
