--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/index.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "test": "node_modules/.bin/jest --watchAll --runInBand --verbose",
-
     "test-coverage": "node_modules/.bin/jest --watchAll --runInBand --verbose --coverage"
   },
   "dependencies": {
@@ -31,6 +30,10 @@
     "@types/node": "^14.14.41",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.0",
+    "swagger-jsdoc": "^6.1.0",
+    "@types/swagger-jsdoc": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
+    "swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
